src/opengrok/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: opengrok
  labels:
    app: opengrok
spec:
  ports:
  - port: 80
    targetPort: 8080
    name: web
    protocol: TCP
  selector:
    app: opengrok
